[gd_scene load_steps=8 format=3 uid="uid://b65ykf244ptkj"]

[ext_resource type="Script" path="res://scratch/test.gd" id="1_bfevy"]
[ext_resource type="PackedScene" uid="uid://3cx7lpgelun1" path="res://ui/mouse_watcher.tscn" id="2_2yiv0"]
[ext_resource type="Script" path="res://ui/tooltip_emitter.gd" id="3_mdiy3"]
[ext_resource type="Texture2D" uid="uid://7vswiefodkdx" path="res://assets/icons/status/blank_icon.png" id="4_op63r"]
[ext_resource type="Texture2D" uid="uid://bj11acj50pte8" path="res://assets/table/soul_fragment_blue_spritesheet2.png" id="5_a2rag"]
[ext_resource type="Shader" path="res://shaders/shader.gdshader" id="5_uwfph"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ra7n8"]
shader = ExtResource("5_uwfph")
shader_parameter/MOUSE = Vector2(20, 20)
shader_parameter/use_exclude_colors = true
shader_parameter/exclude_color1 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color2 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color3 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/exclude_color4 = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/displace_x = 0
shader_parameter/displace_y = 0
shader_parameter/displace_repeat = true
shader_parameter/auto_pan_speed = Vector2(0, 0)
shader_parameter/replace_color1 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color1 = Color(0, 0, 0, 1)
shader_parameter/replace_color2 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color2 = Color(0, 0, 0, 1)
shader_parameter/replace_color3 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color3 = Color(0, 0, 0, 1)
shader_parameter/replace_color4 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color4 = Color(0, 0, 0, 1)
shader_parameter/replace_color5 = Color(0, 0, 0, 1)
shader_parameter/replace_with_color5 = Color(0, 0, 0, 1)
shader_parameter/replace_color_outline = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/replace_with_color_outline = Color(0.0784314, 0.0627451, 0.0745098, 1)
shader_parameter/tint_color = Color(0, 0, 0, 1)
shader_parameter/tint_strength = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_strength = 0.0
shader_parameter/auto_flash_speed = 0.0
shader_parameter/auto_flash_bound = 0.0
shader_parameter/auto_flash_start_time = 0.0
shader_parameter/red_correct = 0.0
shader_parameter/green_correct = 0.0
shader_parameter/blue_correct = 0.0
shader_parameter/gray_correct = 0.0
shader_parameter/brightness_correct = 1.0
shader_parameter/contrast_correct = 1.0
shader_parameter/saturation_correct = 1.0
shader_parameter/scanline_color = Color(0.98, 0.69, 0.23, 1)
shader_parameter/scanline_strength = 1.0
shader_parameter/scanline_left_to_right_position = -0.001
shader_parameter/scanline_top_to_bottom_position = -0.001
shader_parameter/scanline_topleft_to_bottomright_position = -0.001
shader_parameter/scanline_topright_to_bottomleft_position = -0.001
shader_parameter/auto_scanline_left_to_right_on = false
shader_parameter/auto_scanline_left_to_right_reverse = false
shader_parameter/auto_scanline_left_to_right_start_time = 0.0
shader_parameter/auto_scanline_left_to_right_scan_duration = 0.5
shader_parameter/auto_scanline_left_to_right_delay = 1.0
shader_parameter/auto_scanline_top_to_bottom_on = false
shader_parameter/auto_scanline_top_to_bottom_reverse = false
shader_parameter/auto_scanline_top_to_bottom_start_time = 0.0
shader_parameter/auto_scanline_top_to_bottom_scan_duration = 0.5
shader_parameter/auto_scanline_top_to_bottom_delay = 1.0
shader_parameter/auto_scanline_topleft_to_bottomright_on = false
shader_parameter/auto_scanline_topleft_to_bottomright_reverse = false
shader_parameter/auto_scanline_topleft_to_bottomright_start_time = 0.0
shader_parameter/auto_scanline_topleft_to_bottomright_scan_duration = 0.5
shader_parameter/auto_scanline_topleft_to_bottomright_delay = 1.0
shader_parameter/auto_scanline_topright_to_bottomleft_on = false
shader_parameter/auto_scanline_topright_to_bottomleft_reverse = false
shader_parameter/auto_scanline_topright_to_bottomleft_start_time = 0.0
shader_parameter/auto_scanline_topright_to_bottomleft_scan_duration = 0.5
shader_parameter/auto_scanline_topright_to_bottomleft_delay = 1.0
shader_parameter/glow_color = Color(1, 1, 1, 1)
shader_parameter/glow_thickness = 0
shader_parameter/glow_diagonals = false
shader_parameter/auto_glow_speed = 0.0
shader_parameter/auto_glow_bound = 0.75
shader_parameter/auto_glow_start_time = 0.0
shader_parameter/disintegrate_seed = 1
shader_parameter/disintegrate_color = Color(0, 0, 0, 1)
shader_parameter/disintegrate_strength = 0.0
shader_parameter/disintegrate_alpha_bound1 = 0.0
shader_parameter/disintegrate_alpha_bound2 = 0.0
shader_parameter/disintegrate_as_static = false
shader_parameter/auto_disintegrate_random_seed_speed = 0.0
shader_parameter/fog_enabled = false
shader_parameter/fog_opacity = 0.5
shader_parameter/fog_density = 0.25
shader_parameter/fog_speed = Vector2(-0.02, 0)
shader_parameter/vertical_colorline_color = Color(1, 1, 1, 1)
shader_parameter/vertical_colorline_spacing = 2
shader_parameter/vertical_colorline_strength = 0.0
shader_parameter/horizontal_colorline_color = Color(1, 1, 1, 1)
shader_parameter/horizontal_colorline_spacing = 2
shader_parameter/horizontal_colorline_strength = 0.0
shader_parameter/checker_color = Color(0.2, 0.2, 0.2, 1)
shader_parameter/checker_strength = 0.0
shader_parameter/checker_x_size = 1
shader_parameter/checker_y_size = 1
shader_parameter/checker_x_pattern = 2
shader_parameter/checker_y_pattern = 2
shader_parameter/checker_contrast_amount = 1.0
shader_parameter/checker_contrast_ratio = 0.5
shader_parameter/mouselight_on = false
shader_parameter/mouselight_color = Color(1, 1, 1, 1)
shader_parameter/mouselight_strength = 0.5
shader_parameter/mouselight_size = 8
shader_parameter/mouselight_soften_edges = true
shader_parameter/mouselight_checker = false
shader_parameter/auto_mouselight_flicker_speed = 8.0
shader_parameter/auto_mouselight_flicker_bound = 10.0
shader_parameter/cut_left = 0.0
shader_parameter/cut_right = 0.0
shader_parameter/cut_top = 0.0
shader_parameter/cut_bottom = 0.0
shader_parameter/vignette_on = false
shader_parameter/vignette_ignore_transparent = false
shader_parameter/vignette_color = Color(0, 0, 0, 1)
shader_parameter/vignette_radius = 1.0
shader_parameter/transparency = 1.0
shader_parameter/auto_flicker_speed = 0.0
shader_parameter/auto_flicker_bound = 0.0
shader_parameter/auto_flicker_start_time = 0.0

[node name="Scratch" type="Node2D"]

[node name="Test" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 164.0
offset_top = 46.0
offset_right = 225.0
offset_bottom = 111.0
rotation = 0.750492
script = ExtResource("1_bfevy")

[node name="MouseWatcher" parent="Test" node_paths=PackedStringArray("watched") instance=ExtResource("2_2yiv0")]
watched = NodePath("../Hitbox")

[node name="Hitbox" type="CollisionPolygon2D" parent="Test"]
polygon = PackedVector2Array(0, 65, 60, 65, 61, 0, 0, 0)

[node name="VisualPoly" type="Polygon2D" parent="Test"]
position = Vector2(1, 0)
polygon = PackedVector2Array(-1, 0, 60, 0, 60, 65, -1, 65)

[node name="Blank2" type="Control" parent="."]
custom_minimum_size = Vector2(8, 8)
layout_mode = 3
anchors_preset = 0
offset_left = 22.0
offset_top = 19.0
offset_right = 30.0
offset_bottom = 27.0
script = ExtResource("3_mdiy3")
_tooltip = "[center][p][color=slategray]Stone[/color][/p][p]This coin does not flip and its powers cannot be activated.[/p][/center]"

[node name="Sprite2D" type="Sprite2D" parent="Blank2"]
texture = ExtResource("4_op63r")
centered = false
offset = Vector2(-1, -3)

[node name="SoulFragmentBlueSpritesheet2" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ra7n8")
position = Vector2(79, 136)
rotation = 0.47822
texture = ExtResource("5_a2rag")

[connection signal="mouse_entered" from="Test/MouseWatcher" to="Test" method="_on_mouse_watcher_mouse_entered"]
[connection signal="mouse_exited" from="Test/MouseWatcher" to="Test" method="_on_mouse_watcher_mouse_exited"]
